--- a/incompatible.css
+++ b/incompatible.css
@@ -53,4 +53,5 @@ ul.tagit input[type="text"] {
     outline: none;
     box-sizing: border-box;
     box-sizing: border-box;
+    box-sizing: border-box;
 }
